--- a/src/hello-world.css
+++ b/src/hello-world.css
@@ -8,6 +8,12 @@ body {
   margin-bottom: 50px;
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .vertical-container {
   height: 300px;
   display: -webkit-flex;
